<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/coffee_title_view"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/coffee_title"
        android:text="@string/coffee_title_label"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/coffee_description_label"
        style="?android:listSeparatorTextViewStyle"
        android:labelFor="@+id/coffee_description"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/coffee_title_view"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/coffee_description_view"
        android:layout_marginStart="8dp" />

    <CheckBox
        android:id="@+id/coffee_whipped"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream_label"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/almond_milk_checkbox"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Spinner
        android:id="@+id/caramel_shots_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/shot_count_list"
        android:prompt="@string/shot_spinner_prompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/espresso_shots_spinner"/>


    <Spinner
        android:id="@+id/chocolate_shots_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/shot_count_list"
        android:prompt="@string/shot_spinner_prompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caramel_shots_spinner"/>


    <TextView
        android:id="@+id/caramel_shots_spinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caramel_shots_label"
        app:layout_constraintLeft_toRightOf="@+id/caramel_shots_spinner"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/caramel_shots_spinner"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/caramel_shots_spinner"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/chocolate_shots_spinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate_shots_label"
        app:layout_constraintLeft_toRightOf="@+id/chocolate_shots_spinner"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/chocolate_shots_spinner"
        app:layout_constraintBottom_toBottomOf="@+id/chocolate_shots_spinner"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp" />


    <Spinner
        android:id="@+id/espresso_shots_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/shot_count_list"
        android:prompt="@string/shot_spinner_prompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_radio_group"/>

        <TextView
            android:id="@+id/espresso_shots_spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/espresso_shots_label"
            app:layout_constraintLeft_toRightOf="@+id/espresso_shots_spinner"
            app:layout_constraintBottom_toBottomOf="@+id/espresso_shots_spinner"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/espresso_shots_spinner"
            android:layout_marginTop="0dp"
            app:layout_constraintVertical_bias="0.0"/>

    <Spinner
        android:id="@+id/hazelnut_shots_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/shot_count_list"
        android:prompt="@string/shot_spinner_prompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chocolate_shots_spinner"/>

    <Spinner
        android:id="@+id/vanilla_shots_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/shot_count_list"
        android:prompt="@string/shot_spinner_prompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hazelnut_shots_spinner"/>

    <TextView
        android:id="@+id/hazelnut_spinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hazelnut_shots_label"
        app:layout_constraintTop_toTopOf="@+id/hazelnut_shots_spinner"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/hazelnut_shots_spinner"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/hazelnut_shots_spinner"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/vanilla_spinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vanilla_shots_label"
        app:layout_constraintTop_toTopOf="@+id/vanilla_shots_spinner"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/vanilla_shots_spinner"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/vanilla_shots_spinner"
        android:layout_marginLeft="8dp" />


    <RadioGroup
        android:id="@+id/size_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/small_radio"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffee_description_view"
        android:layout_marginLeft="8dp">

        <RadioButton
            android:id="@+id/small_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small_radio_label"/>

        <RadioButton
            android:id="@+id/large_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large_radio_label"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/almond_milk_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almond_milk_checkbox_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/vanilla_shots_spinner"/>

    <EditText
        android:id="@+id/instructions_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusable="auto"
        android:hint="@string/special_instructions_text"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:background="@layout/edittext_border_test"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffee_whipped" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/add_to_cart_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/add_to_cart_button_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageButton
                android:id="@+id/save_as_favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/add_to_cart_button"
                app:layout_constraintEnd_toStartOf="@+id/add_to_cart_button"
                app:layout_constraintTop_toTopOf="@+id/add_to_cart_button"
                app:srcCompat="@drawable/ic_favorited" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>